--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -401,13 +401,14 @@
 					<li><a href="https://recalls-rappels.canada.ca/en">Recalls and safety alerts</a></li>
 				</ul>
 				</details>
-					<details><summary><h3 class="h5 mb-4">Online accounts (update your information, get help, get personal access code, GCkey)</h3></summary>
+					<details><summary><h3 class="h5 mb-4">Online accounts (update banking or address, get access help)</h3></summary>
 				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 		       		<li><a href="/en/government/change-address.html">Change your address</a></li>
                   	<li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
 					<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
 					<li><a href="https://www.canada.ca/en/government/sign-in-online-account/gckey.html">GCkey help</a></li>
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services.html?type=myacct">Help with using your CRA account</a></li>
+					<li><a href="">[other can be added]</a></li>
 				</ul>
 				</details>
 				<details><summary><h3 class="h5 mb-4">Provincial or territorial government (birth certificates, marriage licenses, driver's licenses, health cards)</h3></summary>
