--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -401,7 +401,7 @@
 					<li><a href="https://recalls-rappels.canada.ca/en">Recalls and safety alerts</a></li>
 				</ul>
 				</details>
-					<details><summary><h3 class="h5 mb-4">Online accounts (update banking or address, get access help)</h3></summary>
+					<details><summary><h3 class="h5 mb-4">Online accounts (update banking or address, get access or help)</h3></summary>
 				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 		       		<li><a href="/en/government/change-address.html">Change your address</a></li>
                   	<li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
