--- a/jmtesting/layered-theme-refinement/ly-ircc-v3.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v3.html
@@ -217,25 +217,22 @@
 				</ul>
 			</div>
 		</section>
-		<div class="container">
-		<div class="">
-			<div class="row">
-				<div class="col-sm-1 mrgn-tp-md hidden-xs mrgn-tp-lg">
-					<i class="fas fa-desktop fa-2x"></i>
-				</div>
-				<div class="col-xs-12 col-sm-11">
-							<h2 class="mrgn-tp-0 h4">Your IRCC application</h2>
-					<section class="gc-srvinfo">
+	<div class="container">
+		<div class="row">
+	<div class="col-md-12">
+		<h2 class="mrgn-tp-0 h4">Your IRCC application</h2>
+		<section class="gc-srvinfo">
 		<p>Accounts (GCKey, representatives, employers and more), biometrics, forms, change address</p>
-				<p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Your IRCC application</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
-
-					</section>
-				</div>
-			</div>
-		</div>
+		<p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Your IRCC application</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
+		</section>
 	</div>
-
-
+	</div>
+	<!-- <div class="col-md-3 col-sm-4 hidden-xs">
+		<div class="fa-stack fa-4x icon-gry">
+		<div class="mrgn-bttm-sm"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
+		<i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
+	</div> -->
+	</div>
 	<div class="">
 	<div class="container mrgn-bttm-sm mrgn-tp-lg">
 		<h2 class="mrgn-tp-0 h4">Visas, permits and immigration</h2>
@@ -296,10 +293,17 @@
 		</div>
 	</section>
 	</div>
+	<style>
+		.white-well {
+			background-color: white !important;
+			box-shadow: 2px 4px 10px rgba(0, 0, 0, .3);
+			border-radius: 20px;
+		}
+	</style>
 	<div class="container">
-		<div class="well">
+		<div class="well white-well">
 			<div class="row">
-				<div class="col-sm-1 mrgn-tp-md hidden-xs">
+				<div class="col-sm-1 hidden-xs mrgn-tp-md">
 					<i class="fas fa-question fa-2x"></i>
 				</div>
 				<div class="col-xs-12 col-sm-11">
