--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 
-<title>[Topic title] - Canada.ca</title>
+<title>TBD - Canada.ca</title>
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <meta name="description" content=" ">
 <meta name="author" content=" ">
@@ -118,7 +118,7 @@
 			
 							<li property="itemListElement" typeof="ListItem">
 								<a property="item" typeof="WebPage" href="https://wet-boew.github.io/GCWeb/index-en.html">
-									<span property="name">GCWeb</span>
+									<span property="name">TBD</span>
 								</a>
 								<meta property="position" content="2">
 							</li>
