--- a/chelsey/design/404_fr.html
+++ b/chelsey/design/404_fr.html
@@ -13,16 +13,16 @@ pageclass: cnt-wdth-lmtd
 title: "Page non trouvée"
 ---
 <p><span class="label label-danger">Erreur 404</span></p>
-<p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p> 
-<p>Vous pouvez rechercher :</p>
+<p>La page que vous souhaitez consulter a peut-être été déplacée ou supprimée. Assurez-vous que l’adresse Web (URL) est exacte. N’incluez pas de caractères spéciaux ni d’espaces dans l’URL.</p> 
+<p>Vous cherchez peut-être l’une des pages suivantes :</p>
 <ul>
 <li><a href="https://www.canada.ca/fr.html">Page d'accueil de Canada.ca</a></li>
 <li><a href="https://www.canada.ca/fr/services.html">Services du gouvernement du Canada</a></li>
-<li><a href="https://www.canada.ca/fr/contact.html">Contactez le gouvernement du Canada</a></li>
-<li><a href="https://www.canada.ca/fr/gouvernement/ouvrir-session-dossier-compte-en-ligne.html">Se connecter à un compte</a></li>
+<li><a href="https://www.canada.ca/fr/contact.html">Coordonnées du gouvernement du Canada</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/ouvrir-session-dossier-compte-en-ligne.html">Se connecter à un dossier ou un compte en ligne</a></li>
 <li><a href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
 <li><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
-<li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Visiter ou immigrer au Canada</a></li>
+<li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Immigration ou citoyenneté Canada</a></li>
 </ul>
  <!-- French search -->
             <section class="col-md-12">
@@ -35,7 +35,7 @@ title: "Page non trouvée"
                 <input name="st1rt" value="0" type="hidden">
                 <input name="s5bm3ts21rch" value="x" type="hidden">
                 <div class="input-group">
-                  <label for="wb-srch-q" class="wb-inv">Recherchez le site Web</label>
+                  <label for="wb-srch-q" class="wb-inv">Effectuer une recherche sur le site Web</label>
                   <input id="wb-srch-q-fr" list="wb-srch-q-ac-fr" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Rechercher dans Canada.ca">
                   <datalist id="wb-srch-q-ac-fr"></datalist>
                   <span class="input-group-btn">
