--- a/jmtesting/all-services/top-task-expand-collapse-fr.html
+++ b/jmtesting/all-services/top-task-expand-collapse-fr.html
@@ -417,16 +417,16 @@
 					<p>De nombreux services relèvent de la responsabilité de votre gouvernement provincial ou territorial.</p>
 				<ul id="9" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.alberta.ca/">Alberta</a> (En anglais)</li>
-					<li><a href="https://www2.gov.bc.ca/gov/content/home">British Columbia</a> (En anglais)</li> 
+					<li><a href="https://www2.gov.bc.ca/gov/content/home">Colombie-Britannique</a> (En anglais)</li> 
 					<li><a href="https://www.gov.mb.ca/">Manitoba</a> (En anglais)</li>
-					<li><a href="https://www.gnb.ca/fr.html">New Brunswick</a></li> 
-					<li><a href="https://www.gov.nl.ca/">Newfoundland and Labrador</a> (En anglais)</li> 
-					<li><a href="https://beta.novascotia.ca/">Nova Scotia</a> (En anglais)</li> 
+					<li><a href="https://www.gnb.ca/fr.html">Nouveau-Brunswick</a></li> 
+					<li><a href="https://www.gov.nl.ca/">Terre-Neuve-et-Labrador</a> (En anglais)</li> 
+					<li><a href="https://beta.novascotia.ca/">Nouvelle-Écosse</a> (En anglais)</li> 
 					<li><a href="https://www.ontario.ca/fr/page/gouvernement-de-lontario">Ontario</a></li> 
-					<li><a href="https://www.princeedwardisland.ca/fr">Prince Edward Island</a></li> 
-					<li><a href="https://www.quebec.ca/fr">Quebec</a></li> 
+					<li><a href="https://www.princeedwardisland.ca/fr">Île-du-Prince-Édouard</a></li> 
+					<li><a href="https://www.quebec.ca/fr">Québec</a></li> 
 					<li><a href="https://www.saskatchewan.ca/">Saskatchewan</a> (En anglais)</li> 
-					<li><a href="https://www.gov.nt.ca/">Northwest Territories</a> (En anglais)</li> 
+					<li><a href="https://www.gov.nt.ca/">Territoires du Nord-Ouest</a> (En anglais)</li> 
 					<li><a href="https://www.gov.nu.ca/fr">Nunavut</a></li> 
 					<li><a href="https://yukon.ca/fr">Yukon</a></li> 
 				</ul>
