--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -385,7 +385,7 @@
 			<div class="gc-contextual">
 				<div class="container">
 				<nav>
-					<h3>Where to get help: Contact information</h3>
+					<h3>Get help: Contact information</h3>
 					<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
 						<li><a href="tariffs-business-contact.html">Contacts for businessess</a></li>
 					
