--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -199,13 +199,13 @@
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
                             <p>
-                                Tariff information and Harmonized System (HS) codes, Canadian customs tariff, export and import controls, Canadian sanctions, responsible business conduct abroad, trade agreements, negotiations and
+                                Tariff information and Harmonized System (HS) codes, export and import controls, Canadian sanctions, responsible business conduct abroad, trade agreements, negotiations and
                                 consultations
                             </p>
                         </div>
 						<div class="col-lg-4 col-md-6">
                             <h3><a href="https://cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-eng.html">Canadian customs tariff</a></h3>
-                            <p>Customs tariff, guide to tariff classification for Canadian imports, rulings for tariff classification, valuation, origin and marking, harmonized system, customs notices</p>
+                            <p>Get tariff classifications for goods you want to import into Canada. The Canadian Customs Tariff shows the preferential tariffs for products coming from countries with which Canada has a free trade agreement.</p>
                         </div>
 						<div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
