--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -162,7 +162,7 @@
                                     U.S. tariff support for Canadian business and workers
                                 </a>
                             </h3>
-							<p>Tax relief, programs and support for businesses, remission of tariffs, Employment Insurance (EI) measures and work-sharing, Large Enterprise Tariff Loan (LETL), supporting Canadian exporters and steel sector, expanding into new markets, tools and resources</p>
+							<p>Tax relief, remission of tariffs, Employment Insurance (EI) measures and work-sharing, Large Enterprise Tariff Loan (LETL), supporting Canadian exporters and steel sector, expanding into new markets</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.edc.ca/en/campaign/trade-support-canadian-companies.html">EDC Trade Impact Program</a></h3>
@@ -205,7 +205,7 @@
                         </div>
 						<div class="col-lg-4 col-md-6">
                             <h3><a href="https://cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-eng.html">Canadian customs tariff</a></h3>
-                            <p>Get tariff classifications for goods you want to import into Canada. The Canadian Customs Tariff shows the preferential tariffs for products coming from countries with which Canada has a free trade agreement.</p>
+                            <p>Get tariff classifications for goods you want to import into Canada using the Canadian Customs Tariff, which shows the preferential tariffs for products from countries with a free trade agreement</p>
                         </div>
 						<div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
@@ -224,7 +224,7 @@
                             <p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
-                            <h3><a href="https://cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-eng.html">Remission orders</a></h3>
+                            <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html">Remission orders</a></h3>
                             <p>Remission provides full or partial relief from federal tax, interest, penalty, or other debt paid or payable under legislation administered by the Canada Revenue Agency (CRA).</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
