--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -209,7 +209,7 @@
                         </div>
 						<div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
-                            <p>The Canada Tariff Finder enables Canadian businesses to check import or export tariffs for specific goods and markets, with a focus on countries with which Canada has a Free Trade Agreement.</p>
+                            <p>Use the Canada Tariff Finder to check import or export tariffs for specific goods and markets, focusing on countries where Canada has a Free Trade Agreement</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://agriculture.canada.ca/en/programs">Agricultural programs and services</a></h3>
