--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -263,11 +263,15 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/dte-acl/est-cal-eng.html">Estimate duty and taxes</a></h3>
-                            <p>This tool provides an <b>estimate only</b> and applies strictly to goods imported for <b>personal use</b>. Surtaxes are not included.</p>
+                            <p>This tool provides an <b>estimate only</b> and applies strictly to goods imported for <b>personal use</b>, surtaxes are not included</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                             <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
+                        </div>
+						 <div class="col-lg-4 col-md-6">
+                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs of 25% on goods from the United States: How they apply at the border</a></h3>
+                            <p>What goods the tariffs apply to, how the tariffs apply to travellers, how to calculate the tariffss</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/bgb-rmf-eng.html">Bring goods across the border</a></h3>
@@ -279,10 +283,6 @@
                                 Border wait times, travel and identity documents, smart and secure border tools for travel and trade, border reminder checklist, travelling with a disability, travel health measures, CBSA offices, reporting
                                 requirements for non-commercial aircraft and for private boaters
                             </p>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs of 25% on goods from the United States: How they apply at the border</a></h3>
-                            <p>What goods the tariffs apply to, how the tariffs apply to travellers, how to calculate the tariffss</p>
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/inadmissibility.html">Find out if you’re inadmissible </a></h3>
