--- a/jmtesting/can-us-tariffs/tariffs-business-contact.html
+++ b/jmtesting/can-us-tariffs/tariffs-business-contact.html
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                           <section class="gc-srvinfo">
-                    <h2>Contact information</h2>
+                    <h2>Contacts</h2>
                     <div class="row">
                         <div class="col-md-8">
                             <ul>
