--- a/jmtesting/can-us-tariffs/topic-page-alt.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt.html
@@ -249,6 +249,7 @@
                             <h3><a href="https://inspection.canada.ca/en/animal-health/terrestrial-animals/exports/pets/dogs-usa">Dogs travelling to the United States</a></h3>
                             <p>Entry requirements, dogs that do not meet the requirements</p>
                     </details>
+                    <mark>seems like this is also returning to content included - would make sense to break it out IMO, links can be repeated if they apply to both returning to canada and travelling to</mark>
                    <details><summary>Travelling <b>from</b> the United States to Canada</summary>
                      <div class="row">
 						<div class="col-md-8">
