--- a/jmtesting/can-us-tariffs/topic-page-alt.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt.html
@@ -249,7 +249,6 @@
                             <h3><a href="https://inspection.canada.ca/en/animal-health/terrestrial-animals/exports/pets/dogs-usa">Dogs travelling to the United States</a></h3>
                             <p>Entry requirements, dogs that do not meet the requirements</p>
                     </details>
-                    <mark>seems like this is also returning to content included - would make sense to break it out IMO, links can be repeated if they apply to both returning to canada and travelling to</mark>
                    <details><summary>Travelling <b>from</b> the United States to Canada</summary>
                      <div class="row">
 						<div class="col-md-8">
@@ -276,6 +275,32 @@
                             <p>
                                 Advance Declaration, programs for trusted travellers, secondary inspections, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
                                 protects your information, Indigenous border mobility measures, cruise ship clearance procedures
+                            </p>
+                            <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
+                            <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
+                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/mrc-drc-eng.html">Moving or returning to Canada</a></h3>
+                            <p>Before moving or returning to Canada, items you can import duty- and tax-free, specifications for certain circumstances, declaring your goods upon arrival, restrictions</p>
+                            <h3><a href="https://inspection.canada.ca/en/importing-food-plants-animals/pets">Bringing animals into Canada</a></h3>
+                            <p>Find out what you need before you travel with your pet or import an animal</p>
+                    </div>
+                </details>
+                <details><summary><b>Returning</b> to Canada from the United States</summary>
+                     <div class="row">
+						<div class="col-md-8">
+                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/dte-acl/est-cal-eng.html">Estimate duty and taxes</a></h3>
+                            <p>This tool provides an <b>estimate only</b> and applies strictly to goods imported for <b>personal use</b>, surtaxes are not included</p>
+                            <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
+                            <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
+                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs of 25% on goods from the United States: How they apply at the border</a></h3>
+                            <p>What goods the tariffs apply to, how the tariffs apply to travellers, how to calculate the tariffss</p>
+                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/bgb-rmf-eng.html">Bring goods across the border</a></h3>
+                            <p>Personal exemptions, alcohol and tobacco limits, restricted and prohibited goods, travelling with $10,000 or more</p>
+                            <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/inadmissibility.html">Find out if you’re inadmissible </a></h3>
+                            <p>About inadmissibility, reasons you may be inadmissible, what to do if you’re inadmissible, overcome criminal convictions</p>
+                            <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada.html">Visit Canada</a></h3>
+                            <p>Visitor visa, electronic travel authorization (eTA), visit Canada on business, transit through Canada</p>
+                            <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
+                            <p>Advance Declaration, programs for trusted travellers, secondary inspections, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and protects your information, Indigenous border mobility measures, cruise ship clearance procedures
                             </p>
                             <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
                             <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
