--- a/jmtesting/all-services/top-task-expand-collapse-fr.html
+++ b/jmtesting/all-services/top-task-expand-collapse-fr.html
@@ -335,7 +335,7 @@
 					<li><a href="https://www.canada.ca/fr/services/prestations/pensionspubliques/securite-vieillesse/paiements.html">Sécurité de la vieillesse (SV) - Estimez le montant de vos versements</a></li> <!-- #37-->
 					<li><a href="https://www.canada.ca/fr/services/prestations/pensionspubliques/rpc/montant-prestation.html">Régime de pensions du Canada (RPC) - Montant que vous pourriez recevoir</a></li> <!-- #47-->
 					<li><a href="https://www.canada.ca/fr/emploi-developpement-social/services/mon-dossier/rpc.html">Consultez le montant de vos paiements dans Mon dossier Service Canada (MDSC)</a></li>
-					<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/old-age-securihttps:/www.canada.ca/fr/services/prestations/pensionspubliques/securite-vieillesse/supplement-revenu-garanti.html">Supplément de revenu garanti (SRG)</a></li>
+					<li><a href="https://www.canada.ca/fr/services/prestations/pensionspubliques/securite-vieillesse/supplement-revenu-garanti.html">Supplément de revenu garanti (SRG)</a></li>
 					<li><a href="https://www.canada.ca/fr/services/retraite.html">Apprendre et planifier pour votre retraite</a></li>
 				</ul>
 				</details>	
@@ -366,7 +366,7 @@
 				<details><summary><h3 class="h5 mb-4">Impôts des particuliers</h3></summary>
 				<ul id="3" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.canada.ca/fr/agence-revenu/services/services-electroniques/services-ouverture-session-arc.html">Se connecter à son compte de l'ARC</a></li><!-- #3-->
-					<li><a href="https://www.canada.ca/fr/agence-revenu/services/services-electroniques/services-numeriques-particuliers/dossier-particuliers/correspondance-ligne-particuliers.htmll">Vérifier vos courriels de l'ARC</a></li>  <!-- #4-->
+					<li><a href="https://www.canada.ca/fr/agence-revenu/services/services-electroniques/services-numeriques-particuliers/dossier-particuliers/correspondance-ligne-particuliers.html">Vérifier vos courriels de l'ARC</a></li>  <!-- #4-->
 					<li><a href="https://www.canada.ca/fr/services/impots/impot-sur-le-revenu/impot-sur-le-revenu-des-particuliers/comment-produire.html">Produire votre déclaration de revenus</a></li>  <!-- #6 seasonal?-->
 					<li><a href="https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/tout-votre-declaration-revenus/declaration-revenus/remplir-declaration-revenus/feuillets-renseignements/obtenir-copie-vos-feuillets-renseignements.html">Consulter ou télécharger un T4 ou autres feuillets de renseignements fiscaux</a></li>  <!-- #8-->
 					<li><a href="https://www.canada.ca/fr/services/impots/impot-sur-le-revenu/impot-sur-le-revenu-des-particuliers/apres-declaration-revenus/adc-adnc.html#get">Obtenir la copie d'un avis de cotisation ou de nouvelle cotisation</a></li>  <!-- #14-->
