--- a/jmtesting/all-services/top-task-expand-collapse-fr.html
+++ b/jmtesting/all-services/top-task-expand-collapse-fr.html
@@ -424,7 +424,7 @@
 					<li><a href="https://beta.novascotia.ca/">Nouvelle-Écosse</a> (En anglais)</li> 
 					<li><a href="https://www.ontario.ca/fr/page/gouvernement-de-lontario">Ontario</a></li> 
 					<li><a href="https://www.princeedwardisland.ca/fr">Île-du-Prince-Édouard</a></li> 
-					<li><a href="https://www.quebec.ca/fr">Québec</a></li> 
+					<li><a href="https://www.quebec.ca/">Québec</a></li> 
 					<li><a href="https://www.saskatchewan.ca/">Saskatchewan</a> (En anglais)</li> 
 					<li><a href="https://www.gov.nt.ca/">Territoires du Nord-Ouest</a> (En anglais)</li> 
 					<li><a href="https://www.gov.nu.ca/fr">Nunavut</a></li> 
