--- a/jmtesting/can-us-tariffs/topic-page.html
+++ b/jmtesting/can-us-tariffs/topic-page.html
@@ -316,9 +316,11 @@
                 <section class="gc-srvinfo">
                     <h2>Supporting Canadian products and services</h2>
 					<div class="row">
-						<div class="col-md-8">
+                        <div class="col-lg-4 col-md-6">
 								<h3><a href="https://www.canada.ca/en/canadian-heritage/campaigns/choose-canada.html">Choose Canada</a></h3>
 								<p>Buy Canadian, celebrate Canada, embrace Canadian culture, explore Canadian history, cheer on Canada, protect Canada</p>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
 								<h3><a href="https://ised-isde.canada.ca/site/ised/en/made-canada-buying-selling-and-supporting-canadian#retail">Made in Canada</a></h3>
 								<p>How to tell if a food product is Canadian, made in Canada label requirements for retail goods, travel Canada and support local businesses.</p>
 						</div>
