--- a/jmtesting/can-us-tariffs/topic-page-alt.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt.html
@@ -363,10 +363,18 @@
                 <section class="gc-contributors">
                     <h3>From:</h3>
                     <ul>
-                        <li><a href="https://www.canada.ca/en">[Department or agency 1]</a></li>
-                        <li><a href="https://www.canada.ca/en">[Department or agency 2]</a></li>
+                        <li><a href="https://international.canada.ca/en/global-affairs">Global Affairs Canada</a></li>
+                        <li><a href="https://www.canada.ca/en/department-finance.html">Department of Finance Canada</a></li>
+                        <li><a href="https://www.cbsa-asfc.gc.ca/menu-eng.html">Canada Border Services Agency</a></li>
                     </ul>
                 </section>
+
+                <div class="row">
+                    <div class="col-sm-8 col-md-9 col-lg-9">
+                        <div class="wb-disable-allow" data-ajax-replace="/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html" data-feedback-section="Funding">
+                        </div>
+                    </div>
+                </div>
                 <dl id="wb-dtmd">
                     <dt>Date modified:</dt>
                     <dd><time property="dateModified">2025-09-16</time></dd>
