--- a/jmtesting/can-us-tariffs/topic-page-alt.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt.html
@@ -369,12 +369,10 @@
                     </ul>
                 </section>
 
-                <div class="row">
-                    <div class="col-sm-8 col-md-9 col-lg-9">
-                        <div class="wb-disable-allow" data-ajax-replace="/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html" data-feedback-section="Funding">
-                        </div>
-                    </div>
-                </div>
+               <div class="wb-disable-allow" 
+                            data-ajax-replace="https://www.canada.ca/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html" 
+                            data-feedback-section="[Text defining the section where your page resides]" 
+                            data-feedback-theme="[Text defining the theme of your page]"></div>
                 <dl id="wb-dtmd">
                     <dt>Date modified:</dt>
                     <dd><time property="dateModified">2025-09-16</time></dd>
