--- a/jmtesting/can-us-tariffs/topic-page-alt.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt.html
@@ -360,6 +360,14 @@
 
             <section class="pagedetails container">
                 <h2 class="wb-inv">Page details</h2>
+                   <div class="row">
+
+               <div class="wb-disable-allow col-md-9"
+                            data-ajax-replace="https://www.canada.ca/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html" 
+                            data-feedback-section="[Text defining the section where your page resides]" 
+                            data-feedback-theme="[Text defining the theme of your page]">
+                </div>
+                </div>
                 <section class="gc-contributors">
                     <h3>From:</h3>
                     <ul>
@@ -369,10 +377,8 @@
                     </ul>
                 </section>
 
-               <div class="wb-disable-allow" 
-                            data-ajax-replace="https://www.canada.ca/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html" 
-                            data-feedback-section="[Text defining the section where your page resides]" 
-                            data-feedback-theme="[Text defining the theme of your page]"></div>
+        
+                <div class="clearfix"></div>
                 <dl id="wb-dtmd">
                     <dt>Date modified:</dt>
                     <dd><time property="dateModified">2025-09-16</time></dd>
