--- a/jmtesting/can-us-tariffs/topic-page-alt.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt.html
@@ -182,7 +182,7 @@
                     </div>
                 </section>
                 <section class="gc-srvinfo">
-                    <h2>Businesses and exporters</h2>
+                    <h2>Importers and exporters</h2>
                     <div class="row wb-eqht-grd">
                         <div class="col-lg-4 col-md-6">
                             <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export/us-tariffs.html">Support for Canadian exporters faced with U.S. tariffs</a></h3>
