--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -183,7 +183,7 @@
                 </section>
                 <section class="gc-srvinfo">
                     <h2>Businesses and exporters</h2>
-                     <details><summary>Importing from the Unitied States</summary>
+                     <details><summary>Importing from the United States</summary>
                <div class="row">
                                     <mark>Have to add them</mark>
 
