--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -127,7 +127,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 property="name" id="wb-cont">Title: TBD</h1>
+                        <h1 property="name" id="wb-cont">United States and Canada support</h1>
                         <p>Description, tbd.</p>
                     </div>
                 </div>
@@ -185,64 +185,27 @@
                     <h2>Businesses and exporters</h2>
                      <details><summary>Importing from the United States</summary>
                <div class="row">
-                                    <mark>Have to add them</mark>
-
+        
 						<div class="col-md-8">                  
-                            <h3><a href="https://travel.gc.ca/destinations/united-states">United States travel advice</a></h3>
-                            <p>Risk level, safety and security, entry and exit requirements, health, laws and culture, natural disasters and climate</p>
-                            <h3><a href="https://travel.gc.ca/travelling">Travel outside Canada</a></h3>
-                            <p>Travel advice and advisories, health and safety outside Canada, travel documents, types of travellers, travelling and money, safe travel planner</p>
-                            <h3><a href="https://inspection.canada.ca/en/animal-health/terrestrial-animals/exports/pets/dogs-usa">Dogs travelling to the United States</a></h3>
-                            <p>Entry requirements, dogs that do not meet the requirements</p>
-                        </div>
-                        </div>
-                    </details>
-                    <details><summary>Exporting to the United States</summary>
-                <div class="row">
-                    <mark>Have to add them</mark>
-                            <div class="col-md-8">                  
-                                <h3><a href="https://travel.gc.ca/destinations/united-states">United States travel advice</a></h3>
-                                <p>Risk level, safety and security, entry and exit requirements, health, laws and culture, natural disasters and climate</p>
-                                <h3><a href="https://travel.gc.ca/travelling">Travel outside Canada</a></h3>
-                                <p>Travel advice and advisories, health and safety outside Canada, travel documents, types of travellers, travelling and money, safe travel planner</p>
-                                <h3><a href="https://inspection.canada.ca/en/animal-health/terrestrial-animals/exports/pets/dogs-usa">Dogs travelling to the United States</a></h3>
-                                <p>Entry requirements, dogs that do not meet the requirements</p>
-                            </div>
-                            </div>
-                    </details>
-                    <!-- <div class="row wb-eqht-grd">
-                        <div class="col-lg-4 col-md-6">
-                            <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export/us-tariffs.html">Support for Canadian exporters faced with U.S. tariffs</a></h3>
-                            <p>Understanding CUSMA compliance and step-by-step guide, diversify your exports, self-serve resources for problem-solving, supporting Canadian exporters through U.S. tariff challenges</p>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <h3><a href="https://www.canadapost-postescanada.ca/cpc/en/support/campaign/shipping-to-us-duty-updates.page">Ship to the U.S.</a></h3>
-                            <p>U.S. de minimis suspension, paying duty in advance, how to pay duties, sign up for Canada Post merchant alerts</p>
-                        </div>
-						<div class="col-lg-4 col-md-6">
-                            <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export.html">Doing business in the United States</a></h3>
-                            <p>Market overview, tariffs, rules and regulations, navigating business expansion, events, funding, financing and support programs, contacts</p>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
                             <h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
                             <p>
                                 Tariff information and Harmonized System (HS) codes, export and import controls, Canadian sanctions, responsible business conduct abroad, trade agreements, negotiations and
                                 consultations
                             </p>
                         </div>
-						<div class="col-lg-4 col-md-6">
+						<div class="col-md-8">                  
                             <h3><a href="https://cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-eng.html">Canadian customs tariff</a></h3>
                             <p>Get tariff classifications for goods you want to import into Canada using the Canadian Customs Tariff, which shows the preferential tariffs for products from countries with a free trade agreement</p>
                         </div>
-						<div class="col-lg-4 col-md-6">
+						<div class="col-md-8">                  
                             <h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
                             <p>Use the Canada Tariff Finder to check import or export tariffs for specific goods and markets, focusing on countries where Canada has a Free Trade Agreement</p>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+						<div class="col-md-8">                  
                             <h3><a href="https://agriculture.canada.ca/en/programs">Agricultural programs and services</a></h3>
                             <p>Programs and services supporting innovation, sustainable farming, business development, risk management, trade and market development</p>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+						<div class="col-md-8">                  
                             <h3>
                                 <a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/process-requesting-remission-tariffs-that-apply-on-certain-goods-us.html">
                                     Process for requesting remission of tariffs that apply on certain goods from the U.S.
@@ -250,7 +213,116 @@
                             </h3>
                             <p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html">Remission orders</a></h3>
+                            <p>Remission provides full or partial relief from federal tax, interest, penalty, or other debt paid or payable under legislation administered by the Canada Revenue Agency (CRA).</p>
+                        </div>
+                        <div class="col-md-8">
+                            <h3><a href="https://agriculture.canada.ca/en/international-trade/agriculture-and-agri-food-trade-between-canada-and-united-states">Agriculture and agri-food trade between Canada and the United States</a></h3>
+                            <p>Canada-United States agriculture and agri-food data, support for Canadian agriculture and agri-food industries impacted by trade disruptions, Trade Disruption Customer Support program</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.international.gc.ca/trade-commerce/trade-agreements-accords-commerciaux/agr-acc/cusma-aceum/index.aspx?lang=eng">The Canada-United States-Mexico Agreement (CUSMA)</a></h3>
+                            <p>Doing business in North America, about, latest news, investing in Canada, find events, contact information</p>
+                        </div>
+                        </div>
+                    </details>
+                    <details><summary>Exporting to the United States</summary>
+                <div class="row">
+                   <div class="col-md-8">                  
+                            <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export/us-tariffs.html">Support for Canadian exporters faced with U.S. tariffs</a></h3>
+                            <p>Understanding CUSMA compliance and step-by-step guide, diversify your exports, self-serve resources for problem-solving, supporting Canadian exporters through U.S. tariff challenges</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.canadapost-postescanada.ca/cpc/en/support/campaign/shipping-to-us-duty-updates.page">Ship to the U.S.</a></h3>
+                            <p>U.S. de minimis suspension, paying duty in advance, how to pay duties, sign up for Canada Post merchant alerts</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export.html">Doing business in the United States</a></h3>
+                            <p>Market overview, tariffs, rules and regulations, navigating business expansion, events, funding, financing and support programs, contacts</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
+                            <p>
+                                Tariff information and Harmonized System (HS) codes, export and import controls, Canadian sanctions, responsible business conduct abroad, trade agreements, negotiations and
+                                consultations
+                            </p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-eng.html">Canadian customs tariff</a></h3>
+                            <p>Get tariff classifications for goods you want to import into Canada using the Canadian Customs Tariff, which shows the preferential tariffs for products from countries with a free trade agreement</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
+                            <p>Use the Canada Tariff Finder to check import or export tariffs for specific goods and markets, focusing on countries where Canada has a Free Trade Agreement</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://agriculture.canada.ca/en/programs">Agricultural programs and services</a></h3>
+                            <p>Programs and services supporting innovation, sustainable farming, business development, risk management, trade and market development</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3>
+                                <a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/process-requesting-remission-tariffs-that-apply-on-certain-goods-us.html">
+                                    Process for requesting remission of tariffs that apply on certain goods from the U.S.
+                                </a>
+                            </h3>
+                            <p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html">Remission orders</a></h3>
+                            <p>Remission provides full or partial relief from federal tax, interest, penalty, or other debt paid or payable under legislation administered by the Canada Revenue Agency (CRA).</p>
+                        </div>
+                        <div class="col-md-8">
+                            <h3><a href="https://agriculture.canada.ca/en/international-trade/agriculture-and-agri-food-trade-between-canada-and-united-states">Agriculture and agri-food trade between Canada and the United States</a></h3>
+                            <p>Canada-United States agriculture and agri-food data, support for Canadian agriculture and agri-food industries impacted by trade disruptions, Trade Disruption Customer Support program</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.international.gc.ca/trade-commerce/trade-agreements-accords-commerciaux/agr-acc/cusma-aceum/index.aspx?lang=eng">The Canada-United States-Mexico Agreement (CUSMA)</a></h3>
+                            <p>Doing business in North America, about, latest news, investing in Canada, find events, contact information</p>
+                        </div>
+                            </div>
+                    </details>
+                    <!-- <div class="row wb-eqht-grd">
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export/us-tariffs.html">Support for Canadian exporters faced with U.S. tariffs</a></h3>
+                            <p>Understanding CUSMA compliance and step-by-step guide, diversify your exports, self-serve resources for problem-solving, supporting Canadian exporters through U.S. tariff challenges</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.canadapost-postescanada.ca/cpc/en/support/campaign/shipping-to-us-duty-updates.page">Ship to the U.S.</a></h3>
+                            <p>U.S. de minimis suspension, paying duty in advance, how to pay duties, sign up for Canada Post merchant alerts</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export.html">Doing business in the United States</a></h3>
+                            <p>Market overview, tariffs, rules and regulations, navigating business expansion, events, funding, financing and support programs, contacts</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
+                            <p>
+                                Tariff information and Harmonized System (HS) codes, export and import controls, Canadian sanctions, responsible business conduct abroad, trade agreements, negotiations and
+                                consultations
+                            </p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-eng.html">Canadian customs tariff</a></h3>
+                            <p>Get tariff classifications for goods you want to import into Canada using the Canadian Customs Tariff, which shows the preferential tariffs for products from countries with a free trade agreement</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
+                            <p>Use the Canada Tariff Finder to check import or export tariffs for specific goods and markets, focusing on countries where Canada has a Free Trade Agreement</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3><a href="https://agriculture.canada.ca/en/programs">Agricultural programs and services</a></h3>
+                            <p>Programs and services supporting innovation, sustainable farming, business development, risk management, trade and market development</p>
+                        </div>
+						<div class="col-md-8">                  
+                            <h3>
+                                <a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/process-requesting-remission-tariffs-that-apply-on-certain-goods-us.html">
+                                    Process for requesting remission of tariffs that apply on certain goods from the U.S.
+                                </a>
+                            </h3>
+                            <p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
+                        </div>
+						<div class="col-md-8">                  
                             <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html">Remission orders</a></h3>
                             <p>Remission provides full or partial relief from federal tax, interest, penalty, or other debt paid or payable under legislation administered by the Canada Revenue Agency (CRA).</p>
                         </div>
@@ -258,7 +330,7 @@
                             <h3><a href="https://agriculture.canada.ca/en/international-trade/agriculture-and-agri-food-trade-between-canada-and-united-states">Agriculture and agri-food trade between Canada and the United States</a></h3>
                             <p>Canada-United States agriculture and agri-food data, support for Canadian agriculture and agri-food industries impacted by trade disruptions, Trade Disruption Customer Support program</p>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+						<div class="col-md-8">                  
                             <h3><a href="https://www.international.gc.ca/trade-commerce/trade-agreements-accords-commerciaux/agr-acc/cusma-aceum/index.aspx?lang=eng">The Canada-United States-Mexico Agreement (CUSMA)</a></h3>
                             <p>Doing business in North America, about, latest news, investing in Canada, find events, contact information</p>
                         </div>
