--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 
-        <title>TBD - Canada.ca</title>
+        <title>United States and Canada support - Canada.ca</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta name="description" content=" " />
         <meta name="author" content=" " />
-        <meta name="dcterms.title" content="[Topic title]" />
+        <meta name="dcterms.title" content="United States and Canada support" />
         <meta name="dcterms.description" content=" " />
         <meta name="dcterms.creator" content=" " />
         <meta name="dcterms.language" content="eng" />
