--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -182,7 +182,7 @@
                     </div>
                 </section>
                 <section class="gc-srvinfo">
-                    <h2>Businesses and exporters</h2>
+                    <h2>Businesses, importers and exporters</h2>
         
                      <details><summary>Importing from the United States</summary>
                <div class="row">
