--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -408,6 +408,14 @@
 
             <section class="pagedetails container">
                 <h2 class="wb-inv">Page details</h2>
+                <section class="gc-contributors mrgn-tp-0 mrgn-bttm-lg">
+                    <h3>From:</h3>
+                    <ul>
+                        <li><a href="https://international.canada.ca/en/global-affairs">Global Affairs Canada</a></li>
+                        <li><a href="https://www.canada.ca/en/department-finance.html">Department of Finance Canada</a></li>
+                        <li><a href="https://www.cbsa-asfc.gc.ca/menu-eng.html">Canada Border Services Agency</a></li>
+                    </ul>
+                </section>
                 <div class="row">
                     <div
                         class="wb-disable-allow col-md-9"
@@ -416,15 +424,6 @@
                         data-feedback-theme="[Text defining the theme of your page]"
                     ></div>
                 </div>
-                <section class="gc-contributors">
-                    <h3>From:</h3>
-                    <ul>
-                        <li><a href="https://international.canada.ca/en/global-affairs">Global Affairs Canada</a></li>
-                        <li><a href="https://www.canada.ca/en/department-finance.html">Department of Finance Canada</a></li>
-                        <li><a href="https://www.cbsa-asfc.gc.ca/menu-eng.html">Canada Border Services Agency</a></li>
-                    </ul>
-                </section>
-
                 <div class="clearfix"></div>
                 <dl id="wb-dtmd">
                     <dt>Date modified:</dt>
