--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 
-        <title>United States and Canada support - Canada.ca</title>
+        <title>United States and Canada supports - Canada.ca</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta name="description" content=" " />
         <meta name="author" content=" " />
@@ -127,7 +127,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 property="name" id="wb-cont">United States and Canada support</h1>
+                        <h1 property="name" id="wb-cont">United States and Canada supports</h1>
                         <p>Description, tbd.</p>
                     </div>
                 </div>
