--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -402,6 +402,13 @@
                         <li><a href="https://international.canada.ca/en/global-affairs">Global Affairs Canada</a></li>
                         <li><a href="https://www.canada.ca/en/department-finance.html">Department of Finance Canada</a></li>
                         <li><a href="https://www.cbsa-asfc.gc.ca/menu-eng.html">Canada Border Services Agency</a></li>
+                        <li><a href="https://www.canada.ca/en/employment-social-development.html">Employment and Social Development Canada</a></li>
+                        <li><a href="https://www.tradecommissioner.gc.ca/en.html">Trade Commissioner Service</a></li>
+                        <li><a href="https://agriculture.canada.ca/en">Agriculture and Agri-Food Canada</a></li>
+                        <li><a href="https://ised-isde.canada.ca/site/ised/en">Innovation, Science and Economic Development Canada</a></li>
+                        <li><a href="https://ised-isde.canada.ca/site/ised/en">Innovation, Science and Economic Development Canada</a></li>
+                        <li><a href="https://inspection.canada.ca/en">Canadian Food Inspection Agency</a></li>
+                        <li><a href="https://www.canada.ca/en/canadian-heritage.html">Canadian Heritage</a></li>
                     </ul>
                 </section>
                 <div class="row">
