--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -382,7 +382,7 @@
                             <h3><a href="https://international.canada.ca/en/global-affairs/campaigns/canada-us-engagement">Canada’s engagement with the United States</a></h3>
                             <p>Trade, strengthening border security, strengthening security and defence, disrupting the fentanyl trade, bilateral relations</p>
                             <h3><a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/canadas-response-us-tariffs.html">Canada’s response to U.S. tariffs on Canadian goods</a></h3>
-                            <p>Countermeasures in response to U.S. tariff, helping Canadian business and workers, impacts of unjustified U.S. trade actions</p>
+                            <p>Countermeasures in response to U.S. tariffs, helping Canadian business and workers, impacts of unjustified U.S. trade actions</p>
                             <h3>
                                 <a href="https://www.canada.ca/en/services/defence/securingborder/strengthen-border-security.html?utm_medium=feature&utm_source=canadahome&utm_content=ps-sp-borders-frontieres-24-25">
                                     Strengthening border security
