--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -142,7 +142,7 @@
                             </a>
                         </li>
                         <li><a href="https://ccp-pcc.cbsa-asfc.cloud-nuage.canada.ca/en/homepage">CARM client portal</a></li>
-                        <li><a href="https://www.canada.ca/en/services/benefits/ei/temporary-measures-for-major-economic-conditions.html">Employment and insurance measures</a></li>
+                        <li><a href="https://www.canada.ca/en/services/benefits/ei/temporary-measures-for-major-economic-conditions.html">Employment insurance measures</a></li>
                         <li><a href="https://www.canada.ca/en/news/canada-united-states-relations.html">Latest Canada-U.S. news</a></li>
                         <li>
                             <a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export/us-tariffs/guide-cusma-compliance.html">Step-by-step guide to CUSMA compliance</a>
