--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -149,7 +149,7 @@
                         </li>
                         <li><a href="https://international.canada.ca/en/global-affairs/campaigns/canada-us-engagement">Canada's engagement with the U.S.</a></li>
                         <li><a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/canadas-response-us-tariffs.html">Canada’s response to U.S. tariffs</a></li>
-                        <li><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs on US steel, aluminum and  auto imports: How they apply at the border</a></li>
+                        <li><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs on U.S. steel, aluminum and  auto imports: How they apply at the border</a></li>
                     </ul>
                 </div>
             </section>
