--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -128,7 +128,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h1 property="name" id="wb-cont">United States and Canada supports</h1>
-                        <p>Support for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs and CUSMA, and financial aid.</p>
+                        <p>Support for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs, CUSMA, and financial aid.</p>
                     </div>
                 </div>
             </div>
