--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -437,7 +437,7 @@
 
                             <li><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/ei-individual.html">Employment insurance (EI) for workers</a></li>
 
-                            <li><a href="https://www.cbsa-asfc.gc.ca/contact/bis-sif-eng.html">Border information services for travellers</a></li>
+                            <li><a href="tariffs-travel-contacts.html">Contacts for travellers</a></li>
                         </ul>
                     </nav>
                 </div>
