--- a/jmtesting/can-us-tariffs/tariffs-travel-contacts.html
+++ b/jmtesting/can-us-tariffs/tariffs-travel-contacts.html
@@ -127,6 +127,7 @@
             <div class="container">
                 <div class="row">
                         <h1 property="name" id="wb-cont">United States-Canada support: Contacts for travellers</h1>
+                    <div class="col-md-6">
                         <p>Contact information for people travelling between Canada and the United States.</p>
                     </div>
                 </div>
