--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -335,7 +335,7 @@
                                 </p>
                                 <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/inadmissibility.html">Find out if you’re inadmissible </a></h3>
                                 <p>About inadmissibility, reasons you may be inadmissible, what to do if you’re inadmissible, overcome criminal convictions</p>
-                                <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada.html">Visit Canada</a></h3>
+                                <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada.html">What you need to enter Canada as a visitor</a></h3>
                                 <p>Visitor visa, electronic travel authorization (eTA), visit Canada on business, transit through Canada</p>
                                 <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
                                 <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
